2007-01-13  Marko Anastasov  <marko@marko.anastasov.name>

	* configure.in: Add gnome-vfs and gnome-vfs-module to BONOBOUI_MODULES.

2007-01-09  Christian Persch  <chpe@svn.gnome.org>

	* bonobo/Makefile.am:
	* configure.in: Bump version to 2.17.1.
	Define BONOBO_LOCALEDIR in Makefile.am, NOT in configure.

2007-01-09  Christian Persch  <chpe@svn.gnome.org>

	R acconfig.h:
	* autogen.sh:
	* bonobo/Makefile.am:
	* configure.in:
	Use GNOME_MAINTAINER_MODE_DEFINES which will only define the
	deprecations if you build with --enable-maintainer-mode.
	Misc autoconf cleanup.

2007-01-09  Christian Persch  <chpe@svn.gnome.org>

	* bonobo/bonobo-ui-init-gtk.c:
	Instead of just including popt.h, include gnome-init.h with
	GNOME_DISABLE_DEPRECATED undefined.

2006-12-19  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/libbonoboui-2.0.pc.in: Move ORBit2 and libxml2
	to Requires.private. Samuel Thibault. Closes bug #352191.

2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-canvas-item.c:
	* bonobo/bonobo-control-frame.c:
	* bonobo/bonobo-control.c:
	* bonobo/bonobo-plug.c:
	Make it build with the Quartz backend. Patch from Min Sik Kim
	Closes bug #382692.

2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-dock-layout.c: (bonobo_dock_layout_create_string):
	Guard against NULL to avoid crashes on Win32 at least. Patch from
	Andreas Köhler. Closes bug #379365.

2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-ui-toolbar-popup-item.c: (set_arrow_orientation),
	(impl_set_orientation), (bonobo_ui_toolbar_popup_item_class_init),
	(bonobo_ui_toolbar_popup_item_construct): Use GtkArrow to draw
	the arrows instead of hardcoding them internally. Patch from
	Diego Escalante Urrelo. Closes bug #162312.

2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-control.c:
	* bonobo/bonobo-selector-widget.c: (bonobo_selector_widget_init):
	* bonobo/bonobo-ui-private.h:
	* bonobo/bonobo-ui-sync-toolbar.c: