@@ -5,7 +5,8 @@ includedir=@includedir@
 
 Name: libbonoboui
 Description: libbonoboui
-Requires: glib-2.0 ORBit-2.0 libxml-2.0 libbonobo-2.0 libgnomecanvas-2.0 libgnome-2.0
+Requires: glib-2.0 libbonobo-2.0 libgnomecanvas-2.0 libgnome-2.0
+Requires.private: ORBit-2.0 libxml-2.0 gnome-vfs-2.0
 Version: @VERSION@
 Libs: ${pc_top_builddir}/${pcfiledir}/libbonoboui-2.la
 Cflags: -I${pc_top_builddir}/${pcfiledir}/..
