@@ -6,7 +6,7 @@ includedir=@includedir@
 Name: libbonobui
 Description: libbonoboui
 Requires: glib-2.0 libbonobo-2.0 libgnomecanvas-2.0 libgnome-2.0
-Requires.private: ORBit-2.0 libxml-2.0
+Requires.private: ORBit-2.0 libxml-2.0 gnome-vfs-2.0
 Version: @VERSION@
 Libs: -L${libdir} -lbonoboui-2
 Cflags: -I${includedir}/libbonoboui-2.0
